# CPP-project

./: CMakeLists.txt  makefile
src/: main.cpp
test/: CMakeLists.txt  main.cpp
